--- a/export_web_manager/pom.xml
+++ b/export_web_manager/pom.xml
@@ -25,6 +25,11 @@
           <artifactId>export_cargo_interface</artifactId>
           <version>1.0-SNAPSHOT</version>
       </dependency>
+      <dependency>
+          <groupId>cn.itcast</groupId>
+          <artifactId>export_stat_interface</artifactId>
+          <version>1.0-SNAPSHOT</version>
+      </dependency>
       <!-- dubbo相关 -->
       <dependency>
           <groupId>com.alibaba</groupId>
